updated card, search and logic

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,5 +1,21 @@
-.cardContainer {
-  width: 350px;
+.card-container {
+  margin: auto;
+  margin-bottom: 50px;
+  margin-top: 30px;
+  width: 320px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
+  border: 1px solid #eee;
+  overflow: hidden;
+  padding: 15px;
+}
+
+.card-text-block {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .full {
