--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -14,6 +14,12 @@
   margin-bottom: 5px;
 }
 
+.card-icon {
+  height: 20px;
+  margin-right: 5px;
+  margin-bottom: -3px;
+}
+
 .text-center {
   text-align: center;
 }
