added component icons and duration icon

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -33,3 +33,13 @@
   width: 50%;
   float: left;
 }
+
+.twoThirds {
+  width: 66.7%;
+  float: left;
+}
+
+.third {
+  width: 33.3%;
+  float: left;
+}
