--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  overflow-x: auto;
+  min-height: 100vh;
+  width: 100vw;
+}
+
+.App-background-Bard {
+  background-image: url(./images/backgroundTexture.png) !important;
+  background-size: cover;
 }
 
 .App-logo {
