--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -15,6 +15,10 @@
   margin-bottom: 5px;
 }
 
+/* .card-float-right {
+  float: right;
+} */
+
 .card-icon {
   height: 20px;
   margin-right: 5px;
@@ -29,6 +33,7 @@
   border-radius: 5px;
   padding: 2px;
   background-color: rgb(244, 239, 219);
+  cursor: pointer;
 }
 
 .text-center {
