--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -2,12 +2,18 @@
   margin: auto;
   margin-bottom: 50px;
   margin-top: 30px;
-  width: 320px;
+  width: 270px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
   overflow: hidden;
   padding: 15px;
   background-color: whitesmoke;
+}
+
+@media (min-width: 331px) {
+  .card-container {
+    width: 320px;
+  }
 }
 
 .card-text-block {
