--- a/client/src/components/Login/LoginBtn.css
+++ b/client/src/components/Login/LoginBtn.css
@@ -1,19 +1,33 @@
-.cs-btn {
-  margin: 6px;
+.login-btn {
+  float: left;
+  margin: 20px;
+  font-size: 120%;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 4px;
   padding-bottom: 4px;
   border-radius: 2px;
   border: none;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background: black;
+  color: linen;
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cs-btn:hover {
+.login-btn:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
+}
+
+@media (min-width: 900px) {
+  .login-btn {
+    margin: 100px;
+    margin-bottom: 50px;
+  }
 }
