--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -1,9 +1,8 @@
-/* .search-name {
-  width: 200px;
-  margin-top: 5px;
-} */
+.search-name {
+  text-align: center;
+}
 .search-input {
-  width: 200px;
+  width: 190px;
   background-color: gainsboro;
   box-shadow: none !important;
   border: none !important;
@@ -22,15 +21,44 @@
 
 .search-sub-container {
   width: 200px;
+  padding: 8px;
+  background-color: rgb(239, 239, 235, 0.4);
+  border-radius: 2px;
 }
 
 .search-submit {
   float: right;
-  margin-top: 5px;
+  margin-top: 8px;
+  /* margin-bottom: 5px; */
+  margin-right: 5px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 2px;
+  border: none;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 .search-back {
   float: left;
-  margin-top: 5px;
+  margin-top: 8px;
+  /* margin-bottom: 5px; */
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 2px;
+  border: none;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.search-submit:hover {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  transform: scale(1.08);
+}
+.search-back:hover {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  transform: scale(1.08);
 }
 
 /* .search-submit-container {
