--- a/client/src/pages/Pages.css
+++ b/client/src/pages/Pages.css
@@ -1,5 +1,6 @@
 .page-signup-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -23,3 +24,11 @@
     padding-bottom: 50px;
   }
 }
+
+/* @media (min-width: 800px) {
+  .page-signup-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+} */
