--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card-container {
   margin: auto;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
   margin-top: 30px;
   width: 270px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
@@ -34,12 +34,29 @@
 .card-transcribe-btn {
   margin: auto;
   width: 80px;
-  margin-top: -63px;
+  margin-top: -93px;
   border: solid 1px black;
   border-radius: 5px;
   padding: 2px;
+  text-align: center;
   background-color: rgb(244, 239, 219);
   cursor: pointer;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1000px) {
+  .card-transcribe-btn {
+    margin-left: 585px;
+  }
+}
+.card-transcribe-btn:hover {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  transform: scale(1.08);
+  /* color: whitesmoke;
+  background-color: black; */
 }
 
 .text-center {
