--- a/client/src/components/Search/ClassSelBtn.css
+++ b/client/src/components/Search/ClassSelBtn.css
@@ -6,6 +6,7 @@
   padding-bottom: 4px;
   border-radius: 2px;
   border: none;
+  background-color: linen;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
