--- a/client/src/components/Spellbook/LogoutBtn.css
+++ b/client/src/components/Spellbook/LogoutBtn.css
@@ -1,6 +1,11 @@
 .logout-btn {
   float: left;
-  margin: 20px;
+  clear: both;
+  /* margin-left: auto; */
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: 120%;
   padding-left: 16px;
   padding-right: 16px;
@@ -9,6 +14,8 @@
   border-radius: 2px;
   border: none;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   float: right;
   background: black;
