--- a/client/src/components/Spellbook/Spellbook.css
+++ b/client/src/components/Spellbook/Spellbook.css
@@ -4,9 +4,23 @@
   margin: auto;
   margin-top: 50px;
   padding: 5px;
-  background-color: gainsboro;
+  background-color: rgb(253, 241, 220);
+  border-top: 6px solid rgb(230, 154, 40);
+  border-bottom: 6px solid rgb(230, 154, 40);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  font-family: "Elsie", cursive;
   /* float: left; */
 }
+
+/* font-family: 'Caveat', cursive;
+font-family: 'Rock Salt', cursive;
+font-family: 'Berkshire Swash', cursive;
+font-family: 'Contrail One', cursive;
+font-family: 'Cinzel Decorative', cursive;
+font-family: 'Elsie', cursive;
+font-family: 'Oregano', cursive;
+font-family: 'East Sea Dokdo', cursive;
+font-family: 'Spirax', cursive; */
 
 @media (min-width: 769px) {
   .spellbook-container {
