updated search lists, landing page format and css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,10 @@
 
 .App-background-Bard {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/bardbackground.jpg) !important;
-  background-size: cover;
-  background-position: left top, 100% -10%;
-  background-size: cover, 80vw;
+    url(./images/bardbackground.jpg), url(./images/fullbackgroundtexture.png) !important;
+  background-position: left top, 100% 0%;
+  background-size: 100vw, 80vw;
+  background-repeat: no-repeat, no-repeat, repeat;
 }
 .App-background-Cleric {
   background-image: url(./images/backgroundTexture.png),
@@ -21,61 +21,65 @@
 
 .App-background-Druid {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/druidbackground.jpg) !important;
+    url(./images/druidbackground.jpg), url(./images/fullbackgroundtexture.png) !important;
   /* background-position: left top, 125% 0%; */
-  background-repeat: no-repeat, no-repeat;
-  /* background-size: cover, 42vh; */
+  background-repeat: no-repeat, no-repeat, repeat;
+
+  /* background-size: 100vw, 42vh; */
   background-position: left top, right top;
-  background-size: cover, 100vw;
+  background-size: 100vw, 100vw;
 }
 .App-background-Paladin {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/paladinbackground.jpg) !important;
+    url(./images/paladinbackground.jpg), url(./images/fullbackgroundtexture.png) !important;
   /* background-position: left top, 125% 0%; */
-  background-repeat: no-repeat, no-repeat;
-  /* background-size: cover, 42vh; */
+  background-repeat: no-repeat, no-repeat, repeat;
+
+  /* background-size: 100vw, 42vh; */
   background-position: left top, right top;
-  background-size: cover, 80vw;
+  background-size: 100vw, 80vw;
 }
 
 .App-background-Ranger {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/rangerbackground.jpg) !important;
+    url(./images/rangerbackground.jpg), url(./images/fullbackgroundtexture.png) !important;
   background-position: left top, 140% 0%;
-  background-repeat: no-repeat, no-repeat;
-  background-size: cover, 80vw;
+  background-repeat: no-repeat, no-repeat, repeat;
+
+  background-size: 100vw, 80vw;
 }
 
 .App-background-Sorcerer {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/sorcererbackground.jpg) !important;
+    url(./images/sorcererbackground.jpg),
+    url(./images/fullbackgroundtexture.png) !important;
   background-position: left top, 140% 0%;
-  background-size: cover, 75vw;
-  background-repeat: no-repeat, no-repeat;
+  background-size: 100vw, 75vw;
+  background-repeat: no-repeat, no-repeat, repeat;
 }
 .App-background-Warlock {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/warlockbackground.jpg) !important;
-  background-position: left top, 120% -40%;
-  background-size: cover, 70vw;
-  background-repeat: no-repeat, no-repeat;
+    url(./images/warlockbackground.jpg), url(./images/fullbackgroundtexture.png) !important;
+  background-position: left top, 120% -6%;
+  background-size: 100vw, 70vw;
+  background-repeat: no-repeat, no-repeat, repeat;
 }
 
 .App-background-Wizard {
   background-image: url(./images/backgroundTexture.png),
-    url(./images/wizardbackground.jpg) !important;
+    url(./images/wizardbackground.jpg), url(./images/fullbackgroundtexture.png) !important;
   background-position: left top, 100px 0%;
-  background-size: cover, 99vw;
-  background-repeat: no-repeat, no-repeat;
+  background-size: 100vw, 99vw;
+  background-repeat: no-repeat, no-repeat, repeat;
 }
 
 @media (max-height: 400px) {
   .App-background-Sorcerer {
-    background-size: cover, 80vw;
+    background-size: 100vw, 80vw;
   }
   .App-background-Warlock {
     background-position: left top, 140%, 0%;
-    background-size: cover, 80vw;
+    background-size: 100vw, 80vw;
   }
 }
 
@@ -91,43 +95,43 @@
 
 @media (min-width: 630px) {
   .App-background-Cleric {
-    /* background-size: cover, 70vw; */
+    /* background-size: 100vw, 70vw; */
     background-position: left top, 140% 0%;
     background-size: 100vw, 80vw;
   }
   .App-background-Wizard {
     background-position: left top, 300% 0%;
-    background-size: cover, 90vw;
+    background-size: 100vw, 90vw;
   }
 }
 
 @media (min-width: 700px) {
   .App-background-Sorcerer {
-    background-position: left top, 100% -10%;
-    background-size: cover, 70vw;
+    background-position: left top, 100% 0%;
+    background-size: 100vw, 70vw;
   }
   .App-background-Warlock {
     background-position: left top, 150% -250px;
-    background-size: cover, 80vw;
+    background-size: 100vw, 80vw;
   }
 }
 @media (min-width: 800px) {
   .App-background-Warlock {
     background-position: left top, 150% -350px;
-    background-size: cover, 80vw;
+    background-size: 100vw, 80vw;
   }
 }
 @media (min-width: 1200px) {
   .App-background-Warlock {
-    background-position: left top, 140% 90%;
-    background-size: cover, 80vw;
+    background-position: left top, 140% -90%;
+    background-size: 100vw, 80vw;
   }
 }
 
 @media (min-width: 1420px) {
   .App-background-Warlock {
-    background-position: left top, 140% 70%;
-    background-size: cover, 80vw;
+    background-position: left top, 140% -700px;
+    background-size: 100vw, 80vw;
   }
 }
 
