--- a/client/src/components/Search/ClassSelBtn.css
+++ b/client/src/components/Search/ClassSelBtn.css
@@ -7,6 +7,7 @@
   border-radius: 2px;
   border: none;
   background-color: linen;
+  font-family: "Contrail One", cursive;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
