--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -14,7 +14,10 @@
   font-family: "Elsie", cursive;
 }
 .card-font-2 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Boogaloo", cursive;
+}
+.card-font-3 {
+  font-family: "Cinzel Decorative", cursive;
 }
 /* font-family: 'Caveat', cursive;
 font-family: "Rock Salt", cursive;
