--- a/client/src/components/Lisu/Login.css
+++ b/client/src/components/Lisu/Login.css
@@ -2,7 +2,7 @@
   margin: auto;
   margin-bottom: 50px;
   margin-top: 30px;
-  width: 320px;
+  width: 266px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
   overflow: hidden;
@@ -20,4 +20,10 @@
 
 .login-label {
   margin-top: 6px;
+}
+
+@media (min-width: 375px) {
+  .login-container {
+    width: 320px;
+  }
 }
