--- a/client/src/components/Lisu/Signup.css
+++ b/client/src/components/Lisu/Signup.css
@@ -1,8 +1,8 @@
 .signup-container {
   margin: auto;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
   margin-top: 30px;
-  width: 320px;
+  width: 266px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
   overflow: hidden;
@@ -45,4 +45,10 @@
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
+}
+
+@media (min-width: 375px) {
+  .signup-container {
+    width: 320px;
+  }
 }
