--- a/client/src/components/Search/ClassSelBtn.css
+++ b/client/src/components/Search/ClassSelBtn.css
@@ -19,3 +19,25 @@
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
 }
+
+.cs-btn-tutorial {
+  margin: 6px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-radius: 2px;
+  border: none;
+  background-color: rgb(102, 146, 149);
+  font-family: "Contrail One", cursive;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cs-btn-tutorial:hover {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  transform: scale(1.08);
+}
