--- a/client/src/components/Search/SearchList.css
+++ b/client/src/components/Search/SearchList.css
@@ -5,15 +5,22 @@
 .sL-li {
   float: left;
   clear: both;
+  font-size: 120%;
   margin-top: 2px;
   margin-bottom: 2px;
+  padding-right: 6px;
   font-family: "Spirax", cursive;
   cursor: pointer;
+  border-bottom: 1px solid grey;
   transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sL-li:hover {
-  transform: scale(1.02);
+  transform: scale(1.04);
+  /* border-right: 1px solid lightgrey; */
+  margin-left: 3px;
+  /* border-top: 1px solid lightgrey; */
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .sL-container {
@@ -24,6 +31,7 @@
   clear: both;
   display: inline-block;
   width: auto;
+  font-size: 110%;
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 2px;
@@ -34,7 +42,9 @@
   cursor: pointer;
   background-color: rgb(245, 245, 246, 0.4);
   border: 1px solid lightgrey;
-  font-family: "Berkshire Swash", cursive;
+  /* font-family: "Berkshire Swash", cursive; */
+  font-family: "Cinzel Decorative", cursive;
+
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
