updated css on login button, removed source map from production

--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -38,6 +38,7 @@
   border: none;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  font-family: "Contrail One", cursive;
 }
 .search-back {
   float: left;
@@ -49,6 +50,7 @@
   border: none;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  font-family: "Contrail One", cursive;
 }
 
 .search-submit:hover {
