--- a/client/src/components/Login/LoginBtn.css
+++ b/client/src/components/Login/LoginBtn.css
@@ -15,6 +15,7 @@
   right: 0;
   background: black;
   color: linen;
+  font-family: "Contrail One", cursive;
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
