--- a/client/src/components/Spellbook/LogoutBtn.css
+++ b/client/src/components/Spellbook/LogoutBtn.css
@@ -13,6 +13,7 @@
   padding-bottom: 4px;
   border-radius: 2px;
   border: none;
+  font-family: "Contrail One", cursive;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
