--- a/client/src/components/Login/LoginBtn.module.css
+++ b/client/src/components/Login/LoginBtn.module.css
@@ -1,4 +1,4 @@
-.login-btn {
+.btn {
   float: left;
   margin: 20px;
   font-size: 120%;
@@ -20,14 +20,14 @@
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.login-btn:hover {
+.btn:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
 }
 
 @media (min-width: 900px) {
-  .login-btn {
+  .btn {
     margin: 100px;
     margin-bottom: 50px;
   }
