--- a/client/src/components/Search/ClassSelBtn.module.css
+++ b/client/src/components/Search/ClassSelBtn.module.css
@@ -1,4 +1,4 @@
-.cs-btn {
+.btn {
   margin: 6px;
   padding-left: 16px;
   padding-right: 16px;
@@ -14,13 +14,13 @@
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cs-btn:hover {
+.btn:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
 }
 
-.cs-btn-tutorial {
+.btnTutorial {
   margin: 6px;
   padding-left: 16px;
   padding-right: 16px;
@@ -36,7 +36,7 @@
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cs-btn-tutorial:hover {
+.btnTutorial:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
