--- a/client/src/components/Search/ClassSelection.module.css
+++ b/client/src/components/Search/ClassSelection.module.css
@@ -1,10 +1,10 @@
-.cs-container {
+.container {
   max-width: 800px;
   margin: auto;
   padding: 20px;
 }
 
-.cs-title {
+.title {
   margin: 6px;
   font-family: "Cinzel Decorative", cursive;
 }
