--- a/client/src/components/Search/Search.module.css
+++ b/client/src/components/Search/Search.module.css
@@ -1,8 +1,8 @@
-.search-name {
+.name {
   text-align: center;
   font-family: "Cinzel Decorative", cursive;
 }
-.search-input {
+.input {
   width: 190px;
   background-color: gainsboro;
   box-shadow: none !important;
@@ -12,7 +12,7 @@
   margin-top: 5px;
 }
 
-.search-container {
+.container {
   margin-top: 10px;
   /* margin-top:10px; */
   width: 100%;
@@ -20,14 +20,14 @@
   justify-content: center;
 }
 
-.search-sub-container {
+.subContainer {
   width: 200px;
   padding: 8px;
   background-color: rgb(239, 239, 235, 0.4);
   border-radius: 2px;
 }
 
-.search-submit {
+.submit {
   float: right;
   margin-top: 8px;
   /* margin-bottom: 5px; */
@@ -40,7 +40,7 @@
   cursor: pointer;
   font-family: "Contrail One", cursive;
 }
-.search-back {
+.back {
   float: left;
   margin-top: 8px;
   /* margin-bottom: 5px; */
@@ -53,18 +53,18 @@
   font-family: "Contrail One", cursive;
 }
 
-.search-submit:hover {
+.submit:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
 }
-.search-back:hover {
+.back:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
 }
 
-/* .search-submit-container {
+/* .submit-container {
   width: 200px;
   margin-top: 5px;
 } */
