--- a/client/src/components/Search/SearchList.module.css
+++ b/client/src/components/Search/SearchList.module.css
@@ -1,8 +1,8 @@
-.sL-hidden {
+.hidden {
   display: none;
 }
 
-.sL-li {
+.li {
   float: left;
   clear: both;
   font-size: 120%;
@@ -12,24 +12,26 @@
   font-family: "Spirax", cursive;
   cursor: pointer;
   border-bottom: 1px solid grey;
-  transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: text-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.sL-li:hover {
-  transform: scale(1.04);
+.li:hover {
+  transform: scale(1.08);
   /* border-right: 1px solid lightgrey; */
-  margin-left: 3px;
+  margin-left: 4px;
   /* border-top: 1px solid lightgrey; */
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.sL-container {
+.container {
   padding-left: 20px;
 }
-.sL-level {
+.level {
   float: left;
   clear: both;
-  display: inline-block;
+  /* display: inline-block; */
   width: auto;
   font-size: 110%;
   margin-top: 10px;
@@ -44,11 +46,10 @@
   border: 1px solid lightgrey;
   /* font-family: "Berkshire Swash", cursive; */
   font-family: "Cinzel Decorative", cursive;
-
   transition: box-shadow 135ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.sL-level:hover {
+.level:hover {
   background-color: rgb(245, 245, 246);
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
   transform: scale(1.02);
