--- a/client/src/components/Spellbook/SbRow.module.css
+++ b/client/src/components/Spellbook/SbRow.module.css
@@ -1,4 +1,4 @@
-.sbr-h3 {
+.h3 {
   color: rgb(88, 23, 13);
   border-bottom: 2px solid rgb(200, 173, 106);
   display: inline-block;
@@ -8,7 +8,7 @@
   padding-right: 4px;
 }
 
-.sbr-ul {
+.ul {
   margin-top: 6px;
   margin-bottom: 6px;
 }
