--- a/client/src/components/Icons/Icons.module.css
+++ b/client/src/components/Icons/Icons.module.css
@@ -3,3 +3,20 @@
   margin-right: 5px;
   margin-bottom: -3px;
 }
+
+/* .spin {
+  animation: rotate infinite 3s;
+  transform-box: fill-box;
+  transform-origin: center;
+}
+
+@keyframes rotate {
+  from {
+    transform: scaleX(1);
+    rotate(0deg);
+  }
+  to {
+    transform: scaleX(-1);
+    rotate(180deg);
+  }
+} */
