--- a/client/src/components/MenuBtn/MenuBtn.module.css
+++ b/client/src/components/MenuBtn/MenuBtn.module.css
@@ -1,6 +1,6 @@
 .container {
   float: right;
-  margin-right: 20px;
+  margin-right: 50px;
   margin-left: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -18,18 +18,17 @@
   transition: 0.4s;
 }
 
-/* Rotate first bar */
 .changeOne {
   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
   transform: rotate(-45deg) translate(-9px, 6px);
 }
 
-/* Fade out the second bar */
 .changeTwo {
   opacity: 0;
+  width: 1px;
+  transform: translate(30px);
 }
 
-/* Rotate last bar */
 .changeThree {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px);
