--- a/client/src/components/Search/ClassSelBtn.module.css
+++ b/client/src/components/Search/ClassSelBtn.module.css
@@ -1,5 +1,6 @@
 .btn {
   margin: 6px;
+  height: 21px;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 4px;
@@ -22,6 +23,7 @@
 
 .btnTutorial {
   margin: 6px;
+  height: 21px;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 4px;
@@ -40,4 +42,13 @@
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
   transform: scale(1.08);
+}
+
+@media only screen and (min-width: 668px) {
+  .btn {
+    grid-row-start: 2;
+  }
+  .btnTutorial {
+    grid-row-start: 2;
+  }
 }
