--- a/client/src/components/Search/ClassSelection.module.css
+++ b/client/src/components/Search/ClassSelection.module.css
@@ -8,3 +8,15 @@
   margin: 6px;
   font-family: "Cinzel Decorative", cursive;
 }
+
+@media only screen and (min-width: 668px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr 1fr;
+  }
+  .title {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+}
