--- a/client/src/components/Menu/Menu.module.css
+++ b/client/src/components/Menu/Menu.module.css
@@ -90,6 +90,11 @@
 
 .mGridContainer {
   width: 156px;
+  border: solid 1px #e9ece5;
+  border-radius: 2px;
+  background-color: rgb(52, 115, 139);
+  padding-top: 4px;
+  padding-bottom: 4px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
@@ -97,32 +102,67 @@
 .mGridTitle {
   grid-column-start: 1;
   grid-column-end: 3;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  border-top: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  color: #c0dfd9;
+  font-family: "Cinzel Decorative", cursive;
 }
 .mGridInput {
   grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
-  border-top: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
+  background-color: gainsboro;
+  box-shadow: none !important;
+  border: none !important;
+  border-radius: 2px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
 }
+
 .mBookFormBtn1 {
-  border-top: solid 1px black;
-  border-bottom: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 0.5px black;
+  margin-top: 8px;
+  width: 56px;
+  /* margin-bottom: 5px; */
+  margin-right: 3px;
+  margin-left: 6px;
+  padding-left: 6px;
+  padding-right: 6px;
+  border-radius: 2px;
+  border: none;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  font-family: "Contrail One", cursive;
+  background-color: rgb(97, 168, 164);
   grid-row-start: 3;
 }
 .mBookFormBtn2 {
-  border-top: solid 1px black;
-  border-bottom: solid 1px black;
-  border-left: solid 0.5px black;
-  border-right: solid 1px black;
+  margin-top: 8px;
+  width: 56px;
+  /* margin-bottom: 5px; */
+  margin-right: 6px;
+  margin-left: 3px;
+  padding-left: 6px;
+  padding-right: 6px;
+  border-radius: 2px;
+  border: none;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  font-family: "Contrail One", cursive;
+  background-color: rgb(97, 168, 164);
   grid-row-start: 3;
+}
+
+.mBookFormBtn1:hover {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  transform: scale(1.08);
+}
+
+.mBookFormBtn2:hover {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  transform: scale(1.08);
 }
