--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,19 +1,44 @@
+.modalContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* bottom: 0; */
+  /* display: grid;
+  grid-template-columns: 1fr, auto, 1fr;
+  grid-template-rows: 1fr, auto, 1fr; */
+  /* align-items: center;
+  justify-items: center; */
+  width: 100vw;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .container {
+  /* margin: auto; */
+  /* margin-bottom: 80px;
+  margin-top: 30px; */
+  /* grid-column-start: 2;
+  grid-row-start: 2; */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: auto;
-  margin-bottom: 80px;
-  margin-top: 30px;
+  max-height: calc(100vh - 50px);
+  overflow-y: auto;
   width: 270px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
-  overflow: hidden;
+  /* overflow: hidden; */
   padding: 15px;
   background-color: whitesmoke;
 }
 
 .wrapper {
-  margin: auto;
+  /* margin: auto;
   margin-bottom: 80px;
-  margin-top: 30px;
+  margin-top: 30px; */
   width: 270px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
@@ -47,9 +72,14 @@ font-family: "Oregano", cursive;
 font-family: "East Sea Dokdo", cursive;
 font-family: "Spirax", cursive;
 */
-@media (min-width: 331px) {
+@media (min-width: 376px) {
   .container {
     width: 320px;
+  }
+}
+@media (min-height: 376px) {
+  .container {
+    max-height: calc(100vh - 225px);
   }
 }
 /* @media (min-width: 1000px) {
@@ -75,7 +105,7 @@ font-family: "Spirax", cursive;
 .transcribeBtn {
   margin: auto;
   width: 80px;
-  margin-top: -93px;
+  margin-top: 10px;
   border: solid 1px black;
   border-radius: 5px;
   padding: 2px;
@@ -88,9 +118,9 @@ font-family: "Spirax", cursive;
 }
 
 @media (min-width: 1000px) {
-  .spellbookAdjust {
+  /* .spellbookAdjust {
     margin-left: 685px;
-  }
+  } */
 }
 .transcribeBtn:hover {
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
