--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -3,48 +3,30 @@
   top: 0;
   left: 0;
   /* bottom: 0; */
-  /* display: grid;
-  grid-template-columns: 1fr, auto, 1fr;
-  grid-template-rows: 1fr, auto, 1fr; */
-  /* align-items: center;
-  justify-items: center; */
+  display: flex;
+  align-items: center;
+  justify-items: center;
   width: 100vw;
   min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .container {
-  /* margin: auto; */
-  /* margin-bottom: 80px;
-  margin-top: 30px; */
-  /* grid-column-start: 2;
-  grid-row-start: 2; */
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   margin: auto;
   max-height: calc(100vh - 50px);
   overflow-y: auto;
   width: 270px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
-  /* overflow: hidden; */
   padding: 15px;
   background-color: whitesmoke;
 }
 
 .wrapper {
-  /* margin: auto;
-  margin-bottom: 80px;
-  margin-top: 30px; */
   width: 270px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19), 0 8px 17px rgba(0, 0, 0, 0.2);
   border: 1px solid #eee;
-  /* overflow: hidden; */
   padding: 15px;
-  /* background-color: whitesmoke; */
 }
 .title {
   font-size: 120%;
@@ -53,7 +35,6 @@
 }
 .font1 {
   font-family: "Elsie", cursive;
-  /* font-weight: bold; */
 }
 .font2 {
   font-family: "Boogaloo", cursive;
@@ -62,16 +43,7 @@
 .font3 {
   font-family: "Cinzel Decorative", cursive;
 }
-/* font-family: 'Caveat', cursive;
-font-family: "Rock Salt", cursive;
-font-family: "Berkshire Swash", cursive;
-font-family: "Contrail One", cursive;
-font-family: "Cinzel Decorative", cursive;
-font-family: "Elsie", cursive;
-font-family: "Oregano", cursive;
-font-family: "East Sea Dokdo", cursive;
-font-family: "Spirax", cursive;
-*/
+
 @media (min-width: 376px) {
   .container {
     width: 320px;
@@ -82,19 +54,11 @@ font-family: "Spirax", cursive;
     max-height: calc(100vh - 225px);
   }
 }
-/* @media (min-width: 1000px) {
-  .card-container {
-  }
-} */
 
 .textBlock {
   margin-top: 5px;
   margin-bottom: 5px;
 }
-
-/* .card-float-right {
-  float: right;
-} */
 
 .icon {
   height: 20px;
@@ -103,9 +67,11 @@ font-family: "Spirax", cursive;
 }
 
 .transcribeBtn {
-  margin: auto;
   width: 80px;
-  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
   border: solid 1px black;
   border-radius: 5px;
   padding: 2px;
