--- a/client/src/pages/Pages.module.css
+++ b/client/src/pages/Pages.module.css
@@ -4,6 +4,10 @@
   width: 100vw;
 }
 
+.modalOpen {
+  overflow: hidden;
+}
+
 .backgroundnull {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
     url(../images/fullbackgroundtexture.png) !important;
