--- a/client/src/pages/Pages.module.css
+++ b/client/src/pages/Pages.module.css
@@ -327,6 +327,8 @@
   overflow-x: hidden;
   overflow-y: hidden;
   height: 100vh;
+  position: fixed;
+  width: 100%;
 }
 
 /* @media (min-width: 800px) {
