--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (min-width: 450px) and (min-height: 450px) {
+  body {
+    overscroll-behavior: auto;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
